--- a/my-react-app/public/index.html
+++ b/my-react-app/public/index.html
@@ -37,4 +37,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <style>
+    html, body, #root {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      font-size: 1em;
+      font-family: Arial;
+    }
+  </style>
 </html>
